@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.398 2005/09/30 04:00:23 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.399 2005/09/30 19:52:47 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/client/gliclient.py:
+  initial commit
 
   29 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
